--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,9 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+chrome_user_data/
+notebooks/
+*.ipynb
+playwright/.auth/
+# Ignore all files in the chrome_user_data directory
