--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "beautifulsoup4>=4.13.4",
     "fastapi[standard]>=0.116.1",
     "lxml>=6.0.0",
+    "openai>=1.97.0",
     "pytest-playwright>=0.7.0",
 ]
