--- a/backend/logging.conf
+++ b/backend/logging.conf
@@ -21,7 +21,7 @@ args=(sys.stdout,)
 class=logging.handlers.RotatingFileHandler 
 level=INFO 
 formatter=simpleFormatter 
-args=('app.log', 'a', 2000, 5) 
+args=('./logs/app.log', 'a', 2000, 5) 
 
 [formatter_simpleFormatter] 
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s 
