--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiofiles>=24.1.0",
+    "aiosqlite>=0.21.0",
     "beautifulsoup4>=4.13.4",
     "fastapi[standard]>=0.116.1",
     "lxml>=6.0.0",
+    "markdownify>=1.1.0",
     "openai>=1.97.0",
     "pytest-playwright>=0.7.0",
 ]
