--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "aiosqlite>=0.21.0",
     "beautifulsoup4>=4.13.4",
     "fastapi[standard]>=0.116.1",
+    "google-genai>=1.27.0",
     "lxml>=6.0.0",
     "markdownify>=1.1.0",
     "openai>=1.97.0",
