--- a/backend/logging.conf
+++ b/backend/logging.conf
@@ -1,5 +1,5 @@
 [loggers] 
-keys=root 
+keys=root,httpx,google_genai_models
 
 [handlers] 
 keys=consoleHandler, fileHandler 
@@ -10,6 +10,16 @@ keys=simpleFormatter
 [logger_root] 
 level=INFO 
 handlers=consoleHandler, fileHandler 
+
+[logger_httpx]
+level=WARNING
+handlers=
+qualname=httpx
+
+[logger_google_genai_models]
+level=WARNING
+handlers=
+qualname=google_genai.models
 
 [handler_consoleHandler] 
 class=StreamHandler 
