--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "google-genai>=1.27.0",
     "lxml>=6.0.0",
     "markdownify>=1.1.0",
+    "md2pdf>=1.0.1",
     "openai>=1.97.0",
     "pytest-playwright>=0.7.0",
 ]
