--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,5 +13,6 @@ dependencies = [
     "markdownify>=1.1.0",
     "md2pdf>=1.0.1",
     "pandas>=2.3.1",
+    "requests>=2.32.4",
     "sqlalchemy>=2.0.42",
 ]
