--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
-GEMINI_API_KEY=<your_gemini_api_key>
-BIGQUERY_PROJECT_ID=<your_bigquery_project_id>
-BIGQUERY_DATASET_ID=<your_bigquery_dataset_id>
+OPENROUTER_API_KEY=<your_api_key_here>
+OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
+LLM_HTTP_TIMEOUT=240
+LLM_HTTP_CONNECT_TIMEOUT=30
+LLM_HTTP_WRITE_TIMEOUT=240
+LLM_HTTP_MAX_RETRIES=2
