--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "job-search"
 version = "0.1.0"
-description = "Add your description here"
+description = "API Server backend for Job Search Copilot"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
